--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,11 @@ name = "titanic"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.9"
-dependencies = []
+requires-python = ">=3.13"
+dependencies = [
+    "dash>=3.2.0",
+    "kaleido>=1.0.0",
+    "numpy>=2.3.2",
+    "pandas>=2.3.2",
+    "plotly>=6.3.0",
+]
