--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "dash>=3.2.0",
+    "dash-html-components>=2.0.0",
     "kaleido>=1.0.0",
     "numpy>=2.3.2",
     "pandas>=2.3.2",
